<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/sub_menu_item_background"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp"
        app:layout_constraintDimensionRatio="9:12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSubMenuItemName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="15"
                android:autoSizeMaxTextSize="24sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="4sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/menuitem_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSubMenuContent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:layout_marginHorizontal="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeStepGranularity="4sp"
                android:autoSizeTextType="uniform"
                android:gravity="top|center_horizontal"
                android:text="@string/tvsubmenucontent"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="10"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubMenuPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/guideline4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubMenuWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="4sp"
                    android:autoSizeTextType="uniform"
                    android:gravity="center"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@+id/tvSubMenuPrice" />

                <ImageView
                    android:id="@+id/ivSpicy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/ivspicy"
                    android:scaleType="fitXY"
                    android:src="@drawable/spicy_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/ivSubItemImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ivsubitemimage"
                android:scaleType="fitXY"
                android:src="@drawable/spicy_img" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/menu_item_background_selected"
        android:backgroundTintMode="src_in"
        android:elevation="10dp"
        android:text="@string/to_cart"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
